! Ticket #2420, Improve the reliability of the DirectShow hooks
! Ticket #2953, DVB: Fix crash when closing window right after switching channel
! Ticket #3666, DVB: Don't clear the channel list on saving new scan result
! Ticket #3864, Video renderers: Fix a possible crash caused by a race condition
! Ticket #4029, Fix a rare crash when right-clicking on the playlist panel
! Ticket #4436, DVB: Improve compatibility with certain tuners
! Ticket #4551, Fix a possible crash when saving the current frame
! Ticket #4933, ASS/SSA subtitles: Fix a crash for elements with no horizontal border but a vertical one
! Ticket #4937, Prevent showing black bars when window size after scale exceed current work area
! Ticket #4938, Fix resetting the settings from the "Options" dialog: some settings were (randomly) not
  restored to their default value
! Ticket #4954, Open dialog: Support quoted paths
! Ticket #4956, Improve Play/Pause mouse click responsiveness
! Ticket #4957/#4982, Do not adjust window width in audio mode if no cover-art/logo is loaded or its size
  is limited to zero
! Ticket #4971, Bring back "Play next file in the folder" event in single time events menu
! Ticket #4975, Unrelated images could be loaded as cover-art when no author information was available
  in the audio file
! Ticket #4991, Text subtitles: "opaque box" outlines were scaled twice
! Ticket #4992, DVB: Enabling the "Information" panel using the "Info" button on the "Navigation" dialog
  would reduce the size of the main window when hiding the panel from the "View" menu
! Ticket #4993, DVB: The content of the "Information" panel was lost when changing the UI language
! Ticket #4994, The "Channels" sub-menu was not translated
! Ticket #4995, Some context menus weren't properly positioned when opened by App key
! Ticket #5010, Text subtitles: Fix a crash in case of memory allocation failure
! Ticket #5055, True/False strings were not translated in value column on advanced page